--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Vote contract for Midnight",
   "scripts": {
-    "contract:build": "compactc contract/src/Vote.compact contract/out/Vote",
+    "contract:build": "compactc contract/src/ProposalVoting.compact contract/out/ProposalVoting",
     "contract:test": "vitest"
   },
   "engines": {
