--- a/contract/package.json
+++ b/contract/package.json
@@ -6,7 +6,7 @@
     "test": "vitest",
     "build": "rm -rf dist && tsc --project tsconfig.build.json && cp -Rf ./src/managed ./dist/managed && cp ./src/ProposalVoting.compact ./dist",
     "ci": "npm run compact && npm run typecheck && npm run lint && npm run build && npm run test",
-    "compact": "compact compile src/ProposalVoting.compact ./src/managed/ProposalVoting",
+    "compact": "compactc src/ProposalVoting.compact ./src/managed/ProposalVoting",
      "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "engines": {
