feat: add admin and voter views
feat: add proposal form in admin view

--- a/ui/package.json
+++ b/ui/package.json
@@ -9,12 +9,25 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@helia/strings": "^4.1.0",
     "@mantine/core": "^8.2.7",
     "@mantine/dates": "^8.2.7",
     "@mantine/form": "^8.2.7",
     "@mantine/hooks": "^8.2.7",
+    "@mantine/notifications": "^8.2.7",
+    "@mantine/tiptap": "^8.2.7",
     "@tabler/icons-react": "^3.34.1",
+    "@tiptap/extension-highlight": "^3.3.0",
+    "@tiptap/extension-link": "^3.3.0",
+    "@tiptap/extension-placeholder": "^3.3.0",
+    "@tiptap/extension-subscript": "^3.3.0",
+    "@tiptap/extension-superscript": "^3.3.0",
+    "@tiptap/extension-text-align": "^3.3.0",
+    "@tiptap/pm": "^3.3.0",
+    "@tiptap/react": "^3.3.0",
+    "@tiptap/starter-kit": "^3.3.0",
     "dayjs": "^1.11.13",
+    "helia": "^5.5.1",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
